<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/round_dialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/xml_confirmDeleteCheckpoint_Title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/confirmMessagePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/xml_confirmDeleteCheckpoint_Confirm"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/passwordConfRetour"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_bg"
            android:backgroundTint="@color/greenADAPEI"
            android:text="@string/xml_back"
            android:textColor="@color/mapboxWhite"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"
            android:foreground="?android:attr/selectableItemBackground"/>

        <Button
            android:id="@+id/passwordConfValider"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_bg"
            android:backgroundTint="@color/greenADAPEI"
            android:text="@string/xml_yes"
            android:textColor="@color/mapboxWhite"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:foreground="?android:attr/selectableItemBackground"/>
    </LinearLayout>

</LinearLayout>