<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/round_dialog">


    <TextView
        android:id="@+id/okTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/xml_okDialog_Title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/okText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/xml_nulltext"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/okButton"
        android:layout_weight="0.5"
        android:background="@drawable/item_bg"
        android:backgroundTint="@color/greenADAPEI"
        android:text="@string/xml_ok"
        android:textColor="@color/mapboxWhite"
        android:textStyle="bold"
        android:foreground="?android:attr/selectableItemBackground"/>
</LinearLayout>