<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/round_dialog">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/xml_passwordDialog_Title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/xml_passwordDialog_Demand"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginStart="32dp"
        android:padding="13dp"
        android:background="@drawable/maneuvre_left_bg"
        android:imeOptions="actionDone"
        android:hint="@string/xml_passworddialog_hintPassword"
        android:singleLine="true"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/passwordOublier"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/maneuvre_right_bg"
        android:backgroundTint="@color/pinkADAPEI"
        android:text="\?"
        android:textColor="@color/mapboxWhite"
        android:textStyle="bold"
        android:textSize="19dp"
        android:foreground="?android:attr/selectableItemBackground"/>
    </LinearLayout>

    <TextView
        android:id="@+id/password_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text=""
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/passwordRetour"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_bg"
            android:backgroundTint="@color/greenADAPEI"
            android:text="@string/xml_annuler"
            android:textColor="@color/mapboxWhite"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"
            android:foreground="?android:attr/selectableItemBackground"/>

        <Button
            android:id="@+id/passwordValider"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_bg"
            android:backgroundTint="@color/greenADAPEI"
            android:text="@string/xml_valider"
            android:textColor="@color/mapboxWhite"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:foreground="?android:attr/selectableItemBackground"/>
    </LinearLayout>

</LinearLayout>